--- a/portfolio.html
+++ b/portfolio.html
@@ -406,6 +406,7 @@
                        },
                        "mark":{
                           "type":"line",
+                          "point": true,
                           "color": "#616AA5",
                           "width": {"band":0.4}
                        },
@@ -466,6 +467,7 @@
                        },
                        "mark":{
                           "type":"line",
+                          "point": true,
                           "color": "#616AA5",
                           "width": {"band":0.4}
                        },
@@ -528,6 +530,7 @@
                        },
                        "mark":{
                           "type":"line",
+                          "point": true,
                           "color": "#616AA5",
                           "width": {"band":0.4}
                        },
@@ -591,6 +594,7 @@
                        },
                        "mark":{
                           "type":"line",
+                          "point": true,
                           "color": "#616AA5",
                           "width": {"band":0.4}
                        },
@@ -625,6 +629,68 @@
                              },
                              "scale": {
                                 "domain": {"data": "source", "field": "value"}
+                             }
+                          },
+                          "tooltip": [
+                            {"field":"label"},
+                            {"field":"value"}
+                          ]
+                        }
+                    }
+                    </script>
+            </div>
+            <div class="vega-container">
+                <div class="vega-canvas"></div>
+                <script type="text/data">
+                    {
+                       "$schema":"https://vega.github.io/schema/vega-lite/v5.json",
+                       "background": "#333333",
+                       "data": {
+                          "name": "source",
+                          "url":"data/week5/l2kq_pn2.json",
+                          "format": {"type": "json", "property": "quarters"}
+                       },
+                       "title":{
+                          "text": "Total Production : Sections B, C, D and E (Index):CVM",
+                          "subtitleColor":"#ffffff",
+                          "anchor":"start",
+                          "color":"#ffffff"
+                       },
+                       "mark":{
+                          "type":"line",
+                          "point": true,
+                          "color": "#616AA5",
+                          "width": {"band":0.4}
+                       },
+                       "transform": [
+                            {
+                              "filter": "datum.value > 0 && datum.year >= 2018 "
+                            }
+                        ],
+                        "encoding": {
+                          "x": {
+                            "field": "label",
+                            "type": "ordinal",
+                             "axis":{
+                                "title":"Year",
+                                "grid":false,
+                                "ticks":false,
+                                "labelAngle":90,
+                                "labelColor":"#ffffff",
+                                "titleColor":"#ffffff"
+                             }
+                          },
+                          "y": {
+                            "field": "value",
+                            "type": "quantitative",
+                             "axis":{
+                                "title":"Index, base year = 100",
+                                "grid":false,
+                                "labelColor":"#ffffff",
+                                "titleColor":"#ffffff"
+                             },
+                             "scale": {
+                                "domain": [80, 120]
                              }
                           },
                           "tooltip": [
