--- a/portfolio.html
+++ b/portfolio.html
@@ -412,7 +412,7 @@
                        },
                        "transform": [
                             {
-                              "filter": "datum.value > 0 && datum.year >= 2015 "
+                              "filter": "true && datum.year >= 2015 "
                             }
                         ],
                         "encoding": {
@@ -473,7 +473,7 @@
                        },
                        "transform": [
                             {
-                              "filter": "datum.value > 0 && datum.year >= 2015 "
+                              "filter": "true && datum.year >= 2015 "
                             }
                         ],
                         "encoding": {
@@ -536,7 +536,7 @@
                        },
                        "transform": [
                             {
-                              "filter": "datum.value > 0 && datum.year >= 2015 "
+                              "filter": "true && datum.year >= 2015 "
                             }
                         ],
                         "encoding": {
@@ -600,7 +600,7 @@
                        },
                        "transform": [
                             {
-                              "filter": "datum.value > 0 && datum.year >= 2015 "
+                              "filter": "true && datum.year >= 2015 "
                             }
                         ],
                         "encoding": {
@@ -664,7 +664,7 @@
                        },
                        "transform": [
                             {
-                              "filter": "datum.value > 0 && datum.year >= 2018 "
+                              "filter": "true && datum.year >= 2018 "
                             }
                         ],
                         "encoding": {
@@ -691,6 +691,68 @@
                              },
                              "scale": {
                                 "domain": [80, 120]
+                             }
+                          },
+                          "tooltip": [
+                            {"field":"label"},
+                            {"field":"value"}
+                          ]
+                        }
+                    }
+                    </script>
+            </div>
+            <div class="vega-container">
+                <div class="vega-canvas"></div>
+                <script type="text/data">
+                    {
+                       "$schema":"https://vega.github.io/schema/vega-lite/v5.json",
+                       "background": "#333333",
+                       "data": {
+                          "name": "source",
+                          "url":"data/week5/ihyq_qna.json",
+                          "format": {"type": "json", "property": "quarters"}
+                       },
+                       "title":{
+                          "text": "Gross Domestic Product: Quarter on Quarter growth: CVM SA %",
+                          "subtitleColor":"#ffffff",
+                          "anchor":"start",
+                          "color":"#ffffff"
+                       },
+                       "mark":{
+                          "type":"line",
+                          "point": true,
+                          "color": "#616AA5",
+                          "width": {"band":0.4}
+                       },
+                       "transform": [
+                            {
+                              "filter": "true && datum.year >= 2018 "
+                            }
+                        ],
+                        "encoding": {
+                          "x": {
+                            "field": "label",
+                            "type": "ordinal",
+                             "axis":{
+                                "title":"Year",
+                                "grid":false,
+                                "ticks":false,
+                                "labelAngle":90,
+                                "labelColor":"#ffffff",
+                                "titleColor":"#ffffff"
+                             }
+                          },
+                          "y": {
+                            "field": "value",
+                            "type": "quantitative",
+                             "axis":{
+                                "title":"Index, base year = 100",
+                                "grid":false,
+                                "labelColor":"#ffffff",
+                                "titleColor":"#ffffff"
+                             },
+                             "scale": {
+                                "domain": {"data": "source", "field": "value"}
                              }
                           },
                           "tooltip": [
