week 5 chart 8: proper label

--- a/portfolio.html
+++ b/portfolio.html
@@ -746,7 +746,7 @@
                             "field": "value",
                             "type": "quantitative",
                              "axis":{
-                                "title":"Index, base year = 100",
+                                "title":"% Growth",
                                 "grid":false,
                                 "labelColor":"#ffffff",
                                 "titleColor":"#ffffff"
