--- a/portfolio.html
+++ b/portfolio.html
@@ -270,6 +270,7 @@
     </li>
     <li id="week5">
         <h2>Week5: 9 Graphs from ONS</h2>
+        <p>Compiled these economy related charts to period before and during the COVID-19 pandemic</p>
         <div class="vega-containers">
             <div class="vega-container">
                 <div class="vega-canvas"></div>
